baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_bare_name_rejected/baml_tests__diagnostic_errors__namespaces_bare_name_rejected__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.Config {
  key: string
}
class user.Config$stream {
  key: string | null
}
class user.llm.Response {
  text: string
}
class user.llm.Response$stream {
  text: string | null
}
function user.llm.UseConfig(cfg: Config) -> user.llm.Response  [expr] {
  {  } user.llm.Response { text: cfg.key }
}
