baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_bare_name_rejected/baml_tests__diagnostic_errors__namespaces_bare_name_rejected__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Config {
  key: string
}
class user.Config$stream {
  key: null | string
}
class user.llm.Response {
  text: string
}
function user.llm.UseConfig(cfg: unknown) -> user.llm.Response throws never {
  { : user.llm.Response
    Response { text: cfg.key } : user.llm.Response
  }
  !! 191..198: unresolved type: Config. Did you mean `root.Config`?
}
class user.llm.Response$stream {
  text: null | string
}
