baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_bare_name_rejected/baml_tests__diagnostic_errors__namespaces_bare_name_rejected__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 34117
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unresolved type: Config. Did you mean `root.Config`?
   ╭─[ models.baml:7:24 ]
   │
 7 │ function UseConfig(cfg: Config) -> Response {
   │                        ───┬───  
   │                           ╰───── unresolved type: Config. Did you mean `root.Config`?
   │ 
   │ Note: Error code: E0002
───╯
